1.版本升级到0.0.3
2.登录功能更新，更新后可指定用户角色登录

3.开发系统代码自动生成功能，正在进行中......

--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
@@ -8,3 +8,6 @@ system.version = 0.0.1
 
 # 系统声明
 system.copyright = Copyright © 2018 Yuntao Chanus. All Rights Reserved.
+
+# 代码生成工具连接的数据库
+code.generation.database = yuntao-manager-core
