--- a/yuntao-manager-core/pom.xml
+++ b/yuntao-manager-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>yuntao</groupId>
     <artifactId>yuntao</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
   </parent>
   <artifactId>yuntao-manager-core</artifactId>
   <packaging>war</packaging>
@@ -23,6 +23,17 @@
       <artifactId>yuntao-spring-mvc</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- 集成velocity，自动生成代码 -->
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <!-- <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity-tools</artifactId>
+      <version>2.0</version>
+    </dependency> -->
     <dependency>
       <groupId>jstl</groupId>
       <artifactId>jstl</artifactId>
