1.utils工具包增加一些工具方法
2.系统打包增加源码打包配置，打包后，在其他系统使用本框架时可以查看源码

3.增加代码自动生成功能，当前只能生成Java代码，无法生成页面和js代码，待后续实现

--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,24 @@
             </archive>
           </configuration>
         </plugin>
+        <!-- 打包源文件插件，在此不生效，需放到指定的模块下 -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.0.1</version>
+          <configuration>
+            <attach>true</attach>
+          </configuration>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <phase>compile</phase>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
         <!-- war包插件 -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
