--- a/yuntao-manager-core/pom.xml
+++ b/yuntao-manager-core/pom.xml
@@ -49,6 +49,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
   <build>
     <finalName>yuntao-manager-core</finalName>
     <plugins>
@@ -60,6 +61,23 @@
           <!-- 启用attachClasses选项可以把JAR文件和标准的WAR文件同时安装到Maven仓库中 -->
           <attachClasses>true</attachClasses>
         </configuration>
+      </plugin>
+      <!-- 打包源文件插件 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <configuration>
+          <attach>true</attach>
+        </configuration>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
