--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
@@ -4,10 +4,25 @@
 system.name = 后台管理系统
 
 # 系统版本
-system.version = 0.0.1
+system.version = 0.0.3
 
 # 系统声明
 system.copyright = Copyright © 2018 Yuntao Chanus. All Rights Reserved.
 
-# 代码生成工具连接的数据库
-code.generation.database = yuntao-manager-core
+# 自动生成代码配置信息(暂时放在这里，后期考虑单独保存到一个配置文件，或是保存到数据库中)
+
+# 代码作者
+code.generation.author = Chanus
+# 代码版本号
+code.generation.since = 0.0.3
+# 生成类文件的包名
+code.generation.package = pers.chanus.yuntao.manager
+# 表前缀，生成类名时会去除该前缀，例如，sys_log生成Log.java。如表不存在前缀可不配置
+code.generation.tablePrefix = sys_
+# 生成类名时是否自动去除表前缀，0-否，1-是。此项也可不配置，即不自动去除前缀
+code.generation.autoRemovePrefix = 1
+# 项目是否分多模块，0-否，1-是
+# 单模块时，对应的包名为code.generation.package后拼接model，mapper，service，service.impl，controller
+# 如：pers.chanus.yuntao.manager.model，pers.chanus.yuntao.manager.mapper，pers.chanus.yuntao.manager.service，pers.chanus.yuntao.manager.service.impl，pers.chanus.yuntao.manager.controller
+# 多模块时，code.generation.package应配置为pers.chanus.yuntao，对应的包名为code.generation.package后拼接server.model，server.mapper，server.service，server.service.impl，manager.controller
+code.generation.manyModule = 0
