--- a/yuntao-jdbc/pom.xml
+++ b/yuntao-jdbc/pom.xml
@@ -64,4 +64,26 @@
       <artifactId>spring-tx</artifactId>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <!-- 打包源文件插件 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <configuration>
+          <attach>true</attach>
+        </configuration>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
