增加数据库读写分离支持

--- a/yuntao-jdbc/src/test/resources/jdbc.properties
+++ b/yuntao-jdbc/src/test/resources/jdbc.properties
@@ -6,6 +6,13 @@ jdbc.username = username
 
 jdbc.password = password
 
+# \u8BFB\u5199\u5206\u79BB
+jdbc2.url = jdbc:mysql://host:3306/dbname?useUnicode\=true&characterEncoding\=UTF-8
+
+jdbc2.username = username
+
+jdbc2.password = password
+
 jdbc.validationQuery = SELECT 'x'
 
 dataSource.initialSize = 5
