--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -6,6 +6,12 @@ jdbc.username = root
 
 jdbc.password = YzLgpmEaRbmXDcu7FaoISA==
 
+jdbc2.url = jdbc:mysql://localhost:3306/yuntao-base?useUnicode\=true&characterEncoding\=UTF-8
+
+jdbc2.username = root
+
+jdbc2.password = YzLgpmEaRbmXDcu7FaoISA==
+
 jdbc.validationQuery = SELECT 'x'
 
 dataSource.initialSize = 5
