1.操作员管理增加权限限制字段
2.登录增加谷歌验证器功能

--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
@@ -9,6 +9,9 @@ system.version = 0.0.5
 # 系统声明
 system.copyright = Copyright © 2018 Yuntao Chanus. All Rights Reserved.
 
+# 谷歌验证器秘钥
+google.authenticator.secret = BUX5OUIKAG2UZWED
+
 # 自动生成代码配置信息(暂时放在这里，后期考虑单独保存到一个配置文件，或是保存到数据库中)
 
 # 代码作者
