--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>yuntao</groupId>
   <artifactId>yuntao</artifactId>
-  <version>0.0.5</version>
+  <version>0.0.7</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   
@@ -38,6 +38,7 @@
     <fasterxml.jackson.version>2.9.6</fasterxml.jackson.version>
     <fastjson.version>1.2.49</fastjson.version>
     <poi.version>3.17</poi.version>
+    <commons.codec.version>1.12</commons.codec.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.standard.version>1.1.2</taglibs.standard.version>
   </properties>
@@ -236,6 +237,12 @@
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml-schemas</artifactId>
         <version>${poi.version}</version>
+      </dependency>
+      <!-- Apache 摘要运算、编码 -->
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>${commons.codec.version}</version>
       </dependency>
       <!-- jstl标签库 -->
       <dependency>
