系统依赖jar包升级

--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -1,12 +1,12 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 
-jdbc.url = jdbc:mysql://localhost:3306/yuntao-manager-core?useUnicode\=true&characterEncoding\=UTF-8
+jdbc.url = jdbc:mysql://localhost:3306/yuntao-manager-core?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=GMT%2B8
 
 jdbc.username = root
 
 jdbc.password = YzLgpmEaRbmXDcu7FaoISA==
 
-jdbc2.url = jdbc:mysql://localhost:3306/yuntao-base?useUnicode\=true&characterEncoding\=UTF-8
+jdbc2.url = jdbc:mysql://localhost:3306/yuntao-base?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=GMT%2B8
 
 jdbc2.username = root
 
