--- a/pom.xml
+++ b/pom.xml
@@ -21,24 +21,27 @@
     <!-- J2EE支持 -->
     <javax.servlet.version>3.1.0</javax.servlet.version>
     <!-- 通用jar包版本 -->
-    <spring.version>4.3.18.RELEASE</spring.version>
-    <aspectj.version>1.9.1</aspectj.version>
-    <mybatis.version>3.4.6</mybatis.version>
-    <mybatis.spring.version>1.3.2</mybatis.spring.version>
-    <mysql.version>5.1.47</mysql.version>
-    <druid.version>1.1.10</druid.version>
-    <commons-io.version>2.6</commons-io.version>
-    <fileupload.version>1.3.3</fileupload.version>
-    <slf4j.api.version>1.7.25</slf4j.api.version>
+    <spring.version>5.1.5.RELEASE</spring.version>
+    <aspectj.version>1.9.2</aspectj.version>
+    <mybatis.version>3.5.0</mybatis.version>
+    <mybatis.spring.version>2.0.0</mybatis.spring.version>
+    <mysql.version>8.0.15</mysql.version>
+    <druid.version>1.1.14</druid.version>
+    <spring.data.redis.version>2.1.5.RELEASE</spring.data.redis.version>
+    <jedis.version>3.0.1</jedis.version>
+    <commons.io.version>2.6</commons.io.version>
+    <fileupload.version>1.4</fileupload.version>
+    <slf4j.api.version>1.7.26</slf4j.api.version>
     <logback.version>1.2.3</logback.version>
-    <jcl.version>1.7.25</jcl.version>
+    <jcl.version>1.7.26</jcl.version>
     <quartz.version>2.3.0</quartz.version>
     <dom4j.version>1.6.1</dom4j.version>
     <org.json.version>20180813</org.json.version>
-    <fasterxml.jackson.version>2.9.6</fasterxml.jackson.version>
-    <fastjson.version>1.2.49</fastjson.version>
-    <poi.version>3.17</poi.version>
+    <fasterxml.jackson.version>2.9.8</fasterxml.jackson.version>
+    <fastjson.version>1.2.56</fastjson.version>
+    <poi.version>4.0.1</poi.version>
     <commons.codec.version>1.12</commons.codec.version>
+    <velocity.version>1.7</velocity.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.standard.version>1.1.2</taglibs.standard.version>
   </properties>
@@ -150,11 +153,22 @@
         <artifactId>druid</artifactId>
         <version>${druid.version}</version>
       </dependency>
+      <!-- Redis 集成 -->
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-redis</artifactId>
+        <version>${spring.data.redis.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>${jedis.version}</version>
+      </dependency>
       <!-- IO操作 -->
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>${commons-io.version}</version>
+        <version>${commons.io.version}</version>
       </dependency>
       <!-- 文件上传 -->
       <dependency>
@@ -243,6 +257,12 @@
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
         <version>${commons.codec.version}</version>
+      </dependency>
+      <!-- 集成velocity -->
+      <dependency>
+        <groupId>org.apache.velocity</groupId>
+        <artifactId>velocity</artifactId>
+        <version>${velocity.version}</version>
       </dependency>
       <!-- jstl标签库 -->
       <dependency>
