--- a/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
@@ -10,15 +10,29 @@
     <description>Spring配置文件，启动数据库连接</description>
     <param-name>contextConfigLocation</param-name>
     <!-- 单数据源 -->
-    <param-value>classpath*:spring-database.xml</param-value>
+    <!-- <param-value>classpath*:spring-database.xml</param-value> -->
     <!-- 双数据源，实现读写分离 -->
     <!-- <param-value>classpath*:spring-database-rw.xml</param-value> -->
+    <!-- 单数据源，支持Redis -->
+    <param-value>classpath*:spring-database-redis.xml</param-value>
+    <!-- 单数据源，实现读写分离，支持Redis -->
+    <!-- <param-value>classpath*:spring-database-rw-redis.xml</param-value> -->
   </context-param>
   
   <!-- Spring核心 -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+  <!-- Session统一存储在Redis中，实现Session共享。一般情况下Spring Session的过滤器要放在第一位 -->
+  <filter>
+    <filter-name>springSessionRepositoryFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSessionRepositoryFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <!-- 可以使用RequestContextHolder.currentRequestAttributes() 获取到请求的attr -->
   <listener>
