修复web.xml中spring.tld路径错误的问题

--- a/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
@@ -167,7 +167,7 @@
     </taglib>
     <taglib id="spring">
       <taglib-uri>http://www.springframework.org/tags</taglib-uri>
-      <taglib-location>spring/spring.tld</taglib-location>
+      <taglib-location>jstl/spring.tld</taglib-location>
     </taglib>
   </jsp-config>
   
