系统集成EhCache缓存

--- a/yuntao-manager-core/pom.xml
+++ b/yuntao-manager-core/pom.xml
@@ -28,6 +28,11 @@
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
     </dependency>
+    <!-- 集成Ehcache缓存 -->
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+    </dependency>
     <dependency>
       <groupId>jstl</groupId>
       <artifactId>jstl</artifactId>
