--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
     <poi.version>4.0.1</poi.version>
     <commons.codec.version>1.12</commons.codec.version>
     <velocity.version>1.7</velocity.version>
+    <ehcache.version>2.10.6</ehcache.version>
+    <caffeine.version>2.7.0</caffeine.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.standard.version>1.1.2</taglibs.standard.version>
   </properties>
@@ -275,6 +277,18 @@
         <groupId>org.apache.velocity</groupId>
         <artifactId>velocity</artifactId>
         <version>${velocity.version}</version>
+      </dependency>
+      <!-- 集成Ehcache缓存 -->
+      <dependency>
+        <groupId>net.sf.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>${ehcache.version}</version>
+      </dependency>
+      <!-- 集成Caffeine缓存 -->
+      <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+        <version>${caffeine.version}</version>
       </dependency>
       <!-- jstl标签库 -->
       <dependency>
