1.升级到0.1.7版本
2.增加"定时任务管理"模块，可以动态管理定时任务

3.数据库新增表sys_schedule_job、sys_schedule_trigger

4.修复一些已知问题

--- a/yuntao-utils/pom.xml
+++ b/yuntao-utils/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>yuntao</groupId>
     <artifactId>yuntao</artifactId>
-    <version>0.1.6</version>
+    <version>0.1.7</version>
   </parent>
   <artifactId>yuntao-utils</artifactId>
   <name>${project.artifactId}</name>
@@ -21,6 +21,11 @@
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
+    </dependency>
+    <!-- Quartz定时任务 -->
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
     </dependency>
   </dependencies>
   
