--- a/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
@@ -86,18 +86,29 @@
       <param-name>exclusions</param-name>
       <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,*.jsp,/druid/*,/download/*</param-value>
     </init-param>
+    <!-- 缺省sessionStatMaxCount是1000个 -->
     <init-param>
       <param-name>sessionStatMaxCount</param-name>
       <param-value>2000</param-value>
     </init-param>
+    <!-- 启动或关闭session统计功能 -->
     <init-param>
       <param-name>sessionStatEnable</param-name>
       <param-value>true</param-value>
     </init-param>
+    <!-- 使得druid能够知道当前的session的用户是谁，用户信息保存在session中的sessionName。
+      如果你session中保存的是非string类型的对象，需要重载toString方法 -->
     <init-param>
       <param-name>principalSessionName</param-name>
       <param-value>loginname</param-value>
     </init-param>
+    <!-- 如果你的用户信息保存在cookie中，配置principalCookieName使得druid知道当前的用户是谁。
+      配置为user信息保存在cookie中的cookieName -->
+    <!-- <init-param>
+      <param-name>principalCookieName</param-name>
+      <param-value>loginname</param-value>
+    </init-param> -->
+    <!-- 配置profileEnable能够监控单个url调用的sql列表 -->
     <init-param>
       <param-name>profileEnable</param-name>
       <param-value>true</param-value>
@@ -117,13 +128,13 @@
       <param-name>resetEnable</param-name>
       <param-value>true</param-value>
     </init-param>
+    <!-- 用户名 -->
     <init-param>
-      <!-- 用户名 -->
       <param-name>loginUsername</param-name>
       <param-value>druid</param-value>
     </init-param>
+    <!-- 密码 -->
     <init-param>
-      <!-- 密码 -->
       <param-name>loginPassword</param-name>
       <param-value>druid</param-value>
     </init-param>
