修复创建多模块项目时，代码生成的类文件目录和包名不一致的问题

--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/config.properties
@@ -1,28 +1,25 @@
-##### 系统配置 ####
+##### \u7CFB\u7EDF\u914D\u7F6E ####
 
-# 系统名称
-system.name = 后台管理系统
+# \u7CFB\u7EDF\u540D\u79F0
+system.name = \u540E\u53F0\u7BA1\u7406\u7CFB\u7EDF
 
-# 系统版本
+# \u7CFB\u7EDF\u7248\u672C
 system.version = 0.1.7
 
-# 系统声明
-system.copyright = Copyright © 2020 Yuntao Chanus. All Rights Reserved.
+# \u7CFB\u7EDF\u58F0\u660E
+system.copyright = Copyright \u00A9 2020 Yuntao Chanus. All Rights Reserved.
 
-# 自动生成代码配置信息(暂时放在这里，后期考虑单独保存到一个配置文件，或是保存到数据库中)
+# \u81EA\u52A8\u751F\u6210\u4EE3\u7801\u914D\u7F6E\u4FE1\u606F(\u6682\u65F6\u653E\u5728\u8FD9\u91CC\uFF0C\u540E\u671F\u8003\u8651\u5355\u72EC\u4FDD\u5B58\u5230\u4E00\u4E2A\u914D\u7F6E\u6587\u4EF6\uFF0C\u6216\u662F\u4FDD\u5B58\u5230\u6570\u636E\u5E93\u4E2D)
 
-# 代码作者
+# \u4EE3\u7801\u4F5C\u8005
 code.generation.author = Chanus
-# 代码版本号
+# \u4EE3\u7801\u7248\u672C\u53F7
 code.generation.since = 0.1.7
-# 生成类文件的包名
-code.generation.package = pers.chanus.yuntao.manager
-# 表前缀，生成类名时会去除该前缀，例如，sys_log生成Log.java。如表不存在前缀可不配置
+# \u751F\u6210\u670D\u52A1\u7C7B\u7684\u5305\u540D
+code.generation.server.package = pers.chanus.yuntao.manager
+# \u751F\u6210\u63A7\u5236\u5668\u7684\u5305\u540D
+code.generation.controller.package = pers.chanus.yuntao.manager
+# \u8868\u524D\u7F00\uFF0C\u751F\u6210\u7C7B\u540D\u65F6\u4F1A\u53BB\u9664\u8BE5\u524D\u7F00\uFF0C\u4F8B\u5982\uFF0Csys_log\u751F\u6210Log.java\u3002\u5982\u8868\u4E0D\u5B58\u5728\u524D\u7F00\u53EF\u4E0D\u914D\u7F6E
 code.generation.tablePrefix = sys_
-# 生成类名时是否自动去除表前缀，0-否，1-是。此项也可不配置，即不自动去除前缀
+# \u751F\u6210\u7C7B\u540D\u65F6\u662F\u5426\u81EA\u52A8\u53BB\u9664\u8868\u524D\u7F00\uFF0C0-\u5426\uFF0C1-\u662F\u3002\u6B64\u9879\u4E5F\u53EF\u4E0D\u914D\u7F6E\uFF0C\u5373\u4E0D\u81EA\u52A8\u53BB\u9664\u524D\u7F00
 code.generation.autoRemovePrefix = 1
-# 项目是否分多模块，0-否，1-是
-# 单模块时，对应的包名为code.generation.package后拼接model，mapper，service，service.impl，controller
-# 如：pers.chanus.yuntao.manager.model，pers.chanus.yuntao.manager.mapper，pers.chanus.yuntao.manager.service，pers.chanus.yuntao.manager.service.impl，pers.chanus.yuntao.manager.controller
-# 多模块时，code.generation.package应配置为pers.chanus.yuntao，对应的包名为code.generation.package后拼接server.model，server.mapper，server.service，server.service.impl，manager.controller
-code.generation.manyModule = 0
