1. 新增图片处理工具类
2. 新增数字工具类

3. 新增二维码工具类

3. 部分工具类方法重构，新增部分工具方法

--- a/yuntao-utils/pom.xml
+++ b/yuntao-utils/pom.xml
@@ -27,6 +27,11 @@
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
+    <!-- 二维码处理 -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+    </dependency>
   </dependencies>
   
   <build>
