--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <caffeine.version>2.8.2</caffeine.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.standard.version>1.1.2</taglibs.standard.version>
+    <zxing.version>3.4.0</zxing.version>
   </properties>
   
   <dependencyManagement>
@@ -295,6 +296,12 @@
         <groupId>taglibs</groupId>
         <artifactId>standard</artifactId>
         <version>${taglibs.standard.version}</version>
+      </dependency>
+      <!-- 二维码处理 -->
+      <dependency>
+        <groupId>com.google.zxing</groupId>
+        <artifactId>core</artifactId>
+        <version>${zxing.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
