--- a/pom.xml
+++ b/pom.xml
@@ -471,5 +471,6 @@
     <module>yuntao-spring-mvc</module>
     <module>yuntao-mybatis-generator</module>
     <module>yuntao-manager-core</module>
+    <module>yuntao-weixin</module>
   </modules>
 </project>
