微信模块增加 XMLParse 工具类，解析公众平台发送给公众账号的 xml 消息，以及生成回复消息格式的 xml 数据包

--- a/yuntao-weixin/pom.xml
+++ b/yuntao-weixin/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>yuntao-commons</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- 读写XML -->
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
