--- a/yuntao-manager-core/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -6,7 +6,7 @@ jdbc.username = root
 
 jdbc.password = YzLgpmEaRbmXDcu7FaoISA==
 
-jdbc2.url = jdbc:mysql://localhost:3306/yuntao-base?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+jdbc2.url = jdbc:mysql://localhost:3306/yuntao-manager-core-read?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=GMT%2B8
 
 jdbc2.username = root
 
