1. 系统增加多数据源支持，内置只配置了两个数据源，可以通过注解切换数据源；
2. 重构系统中的读写分离支持；

--- a/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
+++ b/yuntao-manager-core/src/main/webapp/WEB-INF/web.xml
@@ -13,10 +13,14 @@
     <param-value>classpath*:spring-database.xml</param-value>
     <!-- 双数据源，实现读写分离 -->
     <!-- <param-value>classpath*:spring-database-rw.xml</param-value> -->
+    <!-- 多数据源动态切换 -->
+    <!-- <param-value>classpath*:spring-database-dynamic.xml</param-value> -->
     <!-- 单数据源，支持Redis -->
     <!-- <param-value>classpath*:spring-database-redis.xml</param-value> -->
     <!-- 单数据源，实现读写分离，支持Redis -->
     <!-- <param-value>classpath*:spring-database-rw-redis.xml</param-value> -->
+    <!-- 多数据源动态切换，支持Redis -->
+    <!-- <param-value>classpath*:spring-database-dynamic-redis.xml</param-value> -->
   </context-param>
   
   <!-- Spring核心 -->
