--- a/yuntao-jdbc/src/test/resources/redis.properties
+++ b/yuntao-jdbc/src/test/resources/redis.properties
@@ -2,11 +2,11 @@
 # Redis\u9ED8\u8BA4\u670916\u4E2A\u5E93\uFF0C\u5E8F\u53F7\u662F0-15\uFF0C\u9ED8\u8BA4\u662F\u9009\u4E2D\u7684\u662F0\u53F7\u6570\u636E\u5E93
 spring.redis.database = 0
 # Redis\u670D\u52A1\u5668\u5730\u5740
-spring.redis.host = 127.0.0.1
+spring.redis.host = host
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3\uFF0C\u9ED8\u8BA4\u662F6379
 spring.redis.port = 6379
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
-spring.redis.password = 123456
+spring.redis.password = password
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
 spring.redis.expiration = 5000
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u8FDE\u63A5\u6570
