--- a/yuntao-spring-mvc/pom.xml
+++ b/yuntao-spring-mvc/pom.xml
@@ -16,13 +16,41 @@
     </dependency>
     <dependency>
       <groupId>yuntao</groupId>
-      <artifactId>yuntao-server</artifactId>
+      <artifactId>yuntao-jdbc</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <!-- Spring MVC包 -->
+    <!-- Spring包 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
+    </dependency>
+    <!-- 日志 -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    <!-- 日志桥接，Spring中commons-logging替换为logback -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <!-- 文件上传 -->
     <dependency>
