删除 yuntao-mybatis-generator 模块

--- a/yuntao-manager-core/pom.xml
+++ b/yuntao-manager-core/pom.xml
@@ -42,9 +42,9 @@
       <artifactId>standard</artifactId>
     </dependency>
     <dependency>
-      <groupId>yuntao</groupId>
+      <groupId>com.chanus</groupId>
       <artifactId>yuntao-mybatis-generator</artifactId>
-      <version>${project.version}</version>
+      <version>1.0.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
