--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>yuntao</groupId>
   <artifactId>yuntao</artifactId>
-  <version>0.2.3</version>
+  <version>0.2.4</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   
@@ -46,7 +46,7 @@
     <caffeine.version>2.8.2</caffeine.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.standard.version>1.1.2</taglibs.standard.version>
-    <yuntao.utils.version>1.1.0</yuntao.utils.version>
+    <yuntao.utils.version>1.2.0</yuntao.utils.version>
   </properties>
   
   <dependencyManagement>
@@ -299,12 +299,12 @@
       </dependency>
       <!-- 云道工具类 -->
       <dependency>
-        <groupId>com.chanus</groupId>
+        <groupId>com.chanus.utils</groupId>
         <artifactId>yuntao-utils-core</artifactId>
         <version>${yuntao.utils.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.chanus</groupId>
+        <groupId>com.chanus.utils</groupId>
         <artifactId>yuntao-utils-extra</artifactId>
         <version>${yuntao.utils.version}</version>
       </dependency>
@@ -320,11 +320,11 @@
     </dependency>
     <!-- 云道工具类 -->
     <dependency>
-      <groupId>com.chanus</groupId>
+      <groupId>com.chanus.utils</groupId>
       <artifactId>yuntao-utils-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.chanus</groupId>
+      <groupId>com.chanus.utils</groupId>
       <artifactId>yuntao-utils-extra</artifactId>
     </dependency>
     <dependency>
