--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.chanus.yuntaomvc</groupId>
   <artifactId>yuntao-mvc</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   
@@ -17,20 +17,20 @@
     <!-- JDK版本 -->
     <jdk.version>1.8</jdk.version>
     <!-- 单元测试 -->
-    <junit.version>4.12</junit.version>
+    <junit.version>4.13.1</junit.version>
     <!-- J2EE支持 -->
     <javax.servlet.version>3.1.0</javax.servlet.version>
     <!-- 通用jar包版本 -->
-    <spring.version>5.2.9.RELEASE</spring.version>
+    <spring.version>5.3.1</spring.version>
     <aspectj.version>1.9.6</aspectj.version>
     <mybatis.version>3.5.6</mybatis.version>
-    <mybatis.spring.version>2.0.5</mybatis.spring.version>
-    <mybatis.plus.version>3.4.0</mybatis.plus.version>
+    <mybatis.spring.version>2.0.6</mybatis.spring.version>
+    <mybatis.plus.version>3.4.1</mybatis.plus.version>
     <mysql.version>8.0.22</mysql.version>
-    <druid.version>1.2.1</druid.version>
-    <spring.data.redis.version>2.3.4.RELEASE</spring.data.redis.version>
+    <druid.version>1.2.3</druid.version>
+    <spring.data.redis.version>2.4.1</spring.data.redis.version>
     <jedis.version>3.3.0</jedis.version>
-    <spring.session.data.redis.version>2.3.1.RELEASE</spring.session.data.redis.version>
+    <spring.session.data.redis.version>2.4.1</spring.session.data.redis.version>
     <commons.io.version>2.8.0</commons.io.version>
     <fileupload.version>1.4</fileupload.version>
     <slf4j.api.version>1.7.30</slf4j.api.version>
@@ -38,7 +38,7 @@
     <jcl.version>1.7.30</jcl.version>
     <dom4j.version>1.6.1</dom4j.version>
     <fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>
-    <fastjson.version>1.2.74</fastjson.version>
+    <fastjson.version>1.2.75</fastjson.version>
     <poi.version>4.1.2</poi.version>
     <commons.codec.version>1.15</commons.codec.version>
     <velocity.version>1.7</velocity.version>
@@ -46,7 +46,7 @@
     <caffeine.version>2.8.6</caffeine.version>
     <jstl.version>1.2</jstl.version>
     <taglibs.standard.version>1.1.2</taglibs.standard.version>
-    <yuntao.utils.version>1.4.3</yuntao.utils.version>
+    <yuntao.utils.version>1.4.4</yuntao.utils.version>
   </properties>
   
   <dependencyManagement>
