--- a/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/webapp/WEB-INF/classes/config.properties
+++ b/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/webapp/WEB-INF/classes/config.properties
@@ -9,10 +9,14 @@ system.version = 1.1.3
 # \u7CFB\u7EDF\u58F0\u660E
 system.copyright = Copyright \u00A9 2020 Yuntao Chanus. All Rights Reserved.
 
-# \u7CFB\u7EDF\u65E5\u5FD7\u6587\u4EF6\u4FDD\u5B58\u8DEF\u5F84\uFF0C\u82E5\u4E0D\u914D\u7F6E\u5219\u9ED8\u8BA4\u5728\u670D\u52A1\u5668 log/
+# \u7CFB\u7EDF\u65E5\u5FD7\u6587\u4EF6\u4FDD\u5B58\u8DEF\u5F84\uFF0C\u82E5\u4E0D\u914D\u7F6E\u5219\u9ED8\u8BA4\u5728\u670D\u52A1\u5668 logback/
 # logging.file.path = D://logs//yuntao-mvc
 # \u7CFB\u7EDF\u65E5\u5FD7\u6587\u4EF6\u540D\uFF0C\u82E5\u4E0D\u914D\u7F6E\u5219\u9ED8\u8BA4\u4E3A log
 # logging.file.name = log
+# \u65E5\u5FD7\u6587\u4EF6\u4FDD\u7559\u5929\u6570\uFF0C\u82E5\u4E0D\u914D\u7F6E\u5219\u9ED8\u8BA4\u4E3A 30 \u5929
+# logging.file.max.history = 30
+# \u5F53\u5929\u7684\u65E5\u5FD7\u5927\u5C0F\u8D85\u8FC7\u6307\u5B9A\u503C\u65F6\uFF0C\u538B\u7F29\u65E5\u5FD7\u5E76\u4FDD\u5B58\uFF0C\u82E5\u4E0D\u914D\u7F6E\u5219\u9ED8\u8BA4\u4E3A 128MB
+# logging.file.max.size = 128MB
 
 # \u81EA\u52A8\u751F\u6210\u4EE3\u7801\u914D\u7F6E\u4FE1\u606F(\u6682\u65F6\u653E\u5728\u8FD9\u91CC\uFF0C\u540E\u671F\u8003\u8651\u5355\u72EC\u4FDD\u5B58\u5230\u4E00\u4E2A\u914D\u7F6E\u6587\u4EF6\uFF0C\u6216\u662F\u4FDD\u5B58\u5230\u6570\u636E\u5E93\u4E2D)
 
