--- a/yuntao-mvc-jdbc/src/test/resources/jdbc.properties
+++ b/yuntao-mvc-jdbc/src/test/resources/jdbc.properties
@@ -1,13 +1,13 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 
-jdbc.url = jdbc:mysql://host:3306/dbname?useUnicode\=true&characterEncoding\=UTF-8
+jdbc.url = jdbc:mysql://host:3306/dbname?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 
 jdbc.username = username
 
 jdbc.password = password
 
 # \u8BFB\u5199\u5206\u79BB
-jdbc2.url = jdbc:mysql://host:3306/dbname?useUnicode\=true&characterEncoding\=UTF-8
+jdbc2.url = jdbc:mysql://host:3306/dbname?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 
 jdbc2.username = username
 
