--- a/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -1,12 +1,12 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
 
-jdbc.url = jdbc:mysql://localhost:3306/yuntao-mvc?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+jdbc.url = jdbc:mysql://localhost:3306/yuntao-mvc?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 
 jdbc.username = root
 
 jdbc.password = YzLgpmEaRbmXDcu7FaoISA==
 
-jdbc2.url = jdbc:mysql://localhost:3306/yuntao-mvc-read?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+jdbc2.url = jdbc:mysql://localhost:3306/yuntao-mvc-read?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
 
 jdbc2.username = root
 
